loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:12: error: ';' expected but 'while' found.
    } while (!croisement())
      ^Poucet2:15: error: 'while' expected but identifier found.
  bagglesVus match {
  ^Poucet2:20: error: '(' expected but ';' found.
  bagglesVus = 0 
^